[gd_scene load_steps=8 format=3 uid="uid://jtbgpgtgcoy3"]

[ext_resource type="Script" path="res://main.gd" id="1_5jfyn"]
[ext_resource type="PackedScene" uid="uid://txylmowsjix5" path="res://player.tscn" id="1_foxcj"]
[ext_resource type="PackedScene" uid="uid://cwl8wr0l0ypb6" path="res://DeathBanner.tscn" id="4_cbhwb"]
[ext_resource type="FontFile" uid="uid://dawksoj6aosvj" path="res://Jhon Cream.ttf" id="5_borlv"]
[ext_resource type="PackedScene" uid="uid://cra3lusqpetg6" path="res://VictoryBanner.tscn" id="5_fcqle"]
[ext_resource type="AudioStream" uid="uid://cmgbdrdn0hw0p" path="res://zapsplat_cartoon_bubble_pop_sequence_fast_pops_ascending_004_77422.mp3" id="6_pliga"]

[sub_resource type="Curve2D" id="Curve2D_wpeb3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 16, 0, 0, 0, 0, 1152, 16, 0, 0, 0, 0, 1144, 632, 0, 0, 0, 0, 8, 624, 0, 0, 0, 0, 8, 16)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_5jfyn")

[node name="Player" parent="." instance=ExtResource("1_foxcj")]
position = Vector2(173, 334)

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(-146.014, -151.273)
scale = Vector2(1.25175, 1.45455)
curve = SubResource("Curve2D_wpeb3")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(8, 16)

[node name="MobTimer" type="Timer" parent="."]

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="VictoryBanner" parent="EndTimer" instance=ExtResource("5_fcqle")]
visible = false
z_index = 1
offset_left = 220.0
offset_top = 175.0
offset_right = 605.0
offset_bottom = 275.0
scale = Vector2(2, 2)

[node name="DeathBanner" parent="EndTimer" instance=ExtResource("4_cbhwb")]
visible = false
offset_left = 162.0
offset_top = 176.0
offset_right = 570.0
offset_bottom = 276.0
scale = Vector2(2, 2)

[node name="Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 988.0
offset_top = 2.0
offset_right = 1143.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("5_borlv")
theme_override_font_sizes/font_size = 25
text = "Level: "
horizontal_alignment = 2

[node name="WinSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pliga")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
